feat: add html and css for some sections (Fri, Nov 17, 2023 23:41 PM)

--- a/fonts.css
+++ b/fonts.css
@@ -5,6 +5,11 @@
 }
 @font-face {
     font-family: Gotham Pro;
+    src: url(assets/fonts/gothampro_medium.ttf);
+    font-weight: 500;
+}
+@font-face {
+    font-family: Gotham Pro;
     src: url(assets/fonts/gothampro_bold.ttf);
     font-weight: 700;
 }
